# scripts

./: .bashrc  .gitignore  README.md  commands  git  grep_awk_sed  psql  xml.pl
Debug/: README.md  do_readelf.py
ansible/: README.txt  deploy.sh  hosts.yml  localhost_echo.yml  localhost_fill_tmp_file.yml  localhost_path_file.yml  remote_date.yml
arduino/: arduino.md  myArduinoClock.ino
bash/: README.txt  bash_aliases  bash_functions  bashrc  bashrc_remote  column.md  commands  conan.md  cron.md  curl  find  getopts  gpg  graph.dot  grep_awk_sed  jq  less  list_cron.sh  lsof  openssl  parallel.md  redirections.md  redis  remove_duplicate_files.sh  restart_progressive.sh  ssh  terminator  vagrant  vim  vimrc  wait_for_threads.sh  xdotool  xmlstarlet
bin_debug/: bakasable.cpp
cpp/: cast  const_ptr.cpp  cpp  decltype.cpp  hello_world.cpp  if_constexpr.cpp  pattern  ptr.cpp  string_manipulation.cpp  unique_ptr.cpp  valgrind.txt  vector.cpp
git/: README.txt  check_gits.sh  git  git_branch  git_graph.g  git_graph.sh  git_multi_repositories.md  git_submodule  gitconfig  gogs
gnome/: gnome3
kde/: Desktop  Konsole  Shortcuts and Gestures  kde
perl/: database.pl  perl  readline.pl  serv.pl
psql/: README.txt  psql  psql_array.txt  psql_copy.txt  psql_enum.txt  psql_foreign_reference.txt  psql_jsonb.txt  psql_sequence.txt  psql_trigger_function.txt
rust/examples/011_read_yaml/: Cargo.toml
rust/examples/011_read_yaml/src/: main.rs
rust/examples/020_postgresql/tokio_postgres/: Cargo.toml
rust/examples/020_postgresql/tokio_postgres/src/: main.rs
(+132 files in other folders)
