[package]
name = "sql"
version = "0.1.0"
authors = ["BeLZeL"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7" # https://docs.rs/tokio-postgres/0.7.2/tokio_postgres/

# $ cargo tree | grep tokio
# sql v0.1.0
# ├── tokio v1.6.1
# │   └── tokio-macros v1.2.0 (proc-macro)
# └── tokio-postgres v0.7.2
#     ├── tokio v1.6.1 (*)
#     └── tokio-util v0.6.7
#         └── tokio v1.6.1 (*)
# 
